<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Service Configuration">

        <com.example.unkill.preferences.NonNullListPreference
            android:key="service_instances"
            android:title="@string/pref_instances_title"
            android:summary="@string/pref_instances_summary"
            android:entries="@array/service_instances_entries"
            android:entryValues="@array/service_instances_values"
            android:defaultValue="3" />

        <SwitchPreferenceCompat
            android:key="auto_restart"
            android:title="@string/pref_auto_restart_title"
            android:summary="@string/pref_auto_restart_summary"
            android:defaultValue="true" />

    </PreferenceCategory>



    <PreferenceCategory android:title="About">

        <Preference
            android:key="version"
            android:title="Version"
            android:summary="1.0.0"
            android:persistent="false" />

        <Preference
            android:key="about"
            android:title="About Unkill"
            android:summary="Android app resurrection framework"
            android:persistent="false" />

    </PreferenceCategory>

</PreferenceScreen>
